tests/js/error/astRewrite/ast_disamb7.js
arguments;
function f() {
  arguments[1];
  this;
  function g() {
    var arguments;
    arguments;
    this;
  }
  function h(arguments) {
    arguments;
    this;
  }
}
